# u-net-pytorch

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  linter.yml
notebook/: main.ipynb
src/: errors.py
src/benchmark/: early_stopping.py  match.py  metrics.py  report.py  test.py  train.py
src/dataset/: custom_image_mask_dataset.py  mask.py  split_dataset.py  square_dataset.py
src/dataset/data_augmentation/: augmented_semantic_segmentation.py  color_augmentation.py  spatial_augmentation.py
src/model/: blocks.py  semantic_segmentation_model.py  unet.py
src/model/tests/: test_unet.py
src/utils/: display_image_tensor.py
tests/benchmark/: test_match.py  test_metrics.py
tests/dataset/: test_split_dataset.py  test_square_dataset.py
tests/model/: test_unet.py
