[project]
name = "torchsemanticsegmentation"
version = "0.1.0"
description = "implementation of semantic segmentation models using pytorch"
authors = [
    {name = "jbauthess",email = "authesse@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "torch (>=2.9.0,<3.0.0)",
    "torchvision (>=0.24.0,<0.25.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "pylint (>=4.0.2,<5.0.0)",
]
test = [
    "coverage (>=7.11.1,<8.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
]

[tool.pylint.main]
# disable checking of the .venv environment
ignore = [".venv"]
recursive = "y"
jobs = 4                     # parallel workers
# The fail-on option does not work for now. I do not know why
# make the linter returned value only report Errors / Fatals. 
# this yield successful linting when there are only errors/refactor detected issues
# fail-on = ["E", "F"]

# force pylint to return 0 -> this yield github action to never fail because
# of pylint. This is a work-around until fixing the above 'fail-on' issue
exit-zero=true

